2003-01-31  Mark Salter  <msalter@redhat.com>

	* src/hal_syscall.c (hal_syscall_handler): Let generic syscall code
	handle exit.

2003-01-17  Patrick Doyle  <wpd@delcomsys.com>

	* src/redboot_linux_exec.c (do_exec): Round the length up to a
	multiple of 4 so that the copy loop (which decrements the count by
	4 each time through) runs a finite length of time.
	
	Fixed the calculation of params->u.mem.size so that it doesn't
	double the memory size if it is already a power of two.

2003-01-06  Patrick Doyle  <wpd@delcomsys.com>

	* src/redboot_linux_exec.c (do_exec): Added support for, and
	changed to use, ATAG_INITRD2 instead of ATAG_INITRD.  ATAG_INITRD
	specifies the virtual address of the ramdisk while ATAG_INITRD2
	specifies the physical address.

2002-12-11  Mark Salter  <msalter@redhat.com>

	* include/hal_io.h: Allow variant or platform HALs to override
	default IO macros.

2002-11-12  Mark Salter  <msalter@redhat.com>

	* src/arm_stub.c (target_ins): Account for PC prefetch when PC is
	source register in data processing insns.

2002-08-29  Mark Salter  <msalter@redhat.com>

	* src/vectors.S: Avoid entering thumb mode in exception handlers.

2002-08-27  Mark Salter  <msalter@redhat.com>

	* src/arm.ld: Undefine arm to avoid problem with .note.arm.ident.

2002-08-22  Mark Salter  <msalter@redhat.com>

	* src/arm.ld: Add .note.arm.ident section used by tools to identify
	architecture variants.

2002-08-21  Mark Salter  <msalter@redhat.com>

	* src/arm_stub.c: Add support for large registers (e.g. FPU).
	* include/arm_stub.h: Add infrastructure for support of coprocessors.
	* include/hal_arch.h: Ditto.

2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* cdl/hal_arm.cdl: Redboot exec command can now be disabled by CDL
	
2002-07-15  Mark Salter  <msalter@redhat.com>

	* include/arm_stub.h: Comment out NUMREGBYTES.

2002-05-28  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm.cdl: Tweaked description for
	CYGHWR_REDBOOT_ARM_LINUX_EXEC_ADDRESS.