@@ -17,13 +17,14 @@ cdl_configuration eCos {
     package -hardware CYGPKG_DEVS_ETH_CL_CS8900A current ;
     package -hardware CYGPKG_IO_SERIAL_ARM_EDB7XXX current ;
     package -hardware CYGPKG_DEVS_FLASH_EDB7XXX current ;
-    package -hardware CYGPKG_DEVS_FLASH_STRATA current ;
     package -template CYGPKG_HAL current ;
     package -template CYGPKG_INFRA current ;
     package -template CYGPKG_REDBOOT current ;
     package -template CYGPKG_ISOINFRA current ;
     package -template CYGPKG_LIBC_STRING current ;
     package -template CYGPKG_NS_DNS current ;
+    package -template CYGPKG_CRC current ;
+    package -hardware CYGPKG_DEVS_FLASH_STRATA current ;
     package CYGPKG_IO_FLASH current ;
     package CYGPKG_IO_ETH_DRIVERS current ;
     package CYGPKG_COMPRESS_ZLIB current ;
@@ -73,8 +74,20 @@ cdl_component CYGBLD_BUILD_REDBOOT {
     user_value 1
 };
 
+cdl_option CYGBLD_BUILD_REDBOOT_WITH_EXEC {
+    user_value 1
+};
+
 cdl_option CYGBLD_REDBOOT_MIN_IMAGE_SIZE {
     user_value 0x00040000
+};
+
+cdl_option CYGSEM_REDBOOT_FLASH_COMBINED_FIS_AND_CONFIG {
+    user_value 1
+};
+
+cdl_option CYGHWR_REDBOOT_ARM_LINUX_EXEC_ADDRESS_DEFAULT {
+    inferred_value 0xC0038000
 };
 
 cdl_option CYGBLD_ISO_STRTOK_R_HEADER {
@@ -105,8 +118,4 @@ cdl_option CYGPKG_NS_DNS_BUILD {
     inferred_value 0
 };
 
-
-cdl_option CYGBLD_BUILD_REDBOOT_WITH_EXEC {
-    user_value 0
-};
 
